@@ -19,10 +19,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.10.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -62,14 +61,27 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>massim</groupId>
-            <artifactId>server</artifactId>
-            <version>2020-2.0</version>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>massim</groupId>
             <artifactId>monitor</artifactId>
             <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>massim</groupId>
+            <artifactId>server</artifactId>
+            <version>2020-2.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
